--- a/prototype/index.html
+++ b/prototype/index.html
@@ -2,19 +2,21 @@
 <html lang='en'>
 <meta http-equiv="content-type" content="text/html;charset=utf-8"/>
 <head>
-    <link href='../cdn.jsdelivr.net/jquery.slick/1.5.9/slick.css' rel='stylesheet' type='text/css'>
+    <link href='welearn-css/vendor/slick.css' rel='stylesheet' type='text/css'>
     <!-- Roboto Google Font -->
-    <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900&amp;subset=vietnamese'
-          rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900&amp;subset=vietnamese' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/icon?family=Material+Icons' rel='stylesheet'>
-    <script src='../tracking.edumall.vn/client-api/js/spymaster.js' type='text/javascript'></script>
+    <script src='welearn-js/spymaster.js' type='text/javascript'></script>
     <!-- Font Awesome -->
-    <script src='../use.fontawesome.com/218530d9c5.js'></script>
+    <script src='welearn-js/fontawesome.js'></script>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://code.jquery.com/jquery-2.2.4.min.js"
             integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
     <link rel="shortcut icon" type="image/x-icon"
-          href="../staticedm.r.worldssl.net/assets/favicon_edumall-2f059641813f828cefe30f745a861647b78acca2618e34332e65e88adbc53c98.png"/>
+          href="welearn-img/icon.png"/>
+    <!--Main-css-->
+    <link rel="stylesheet" media="all" href="welearn-css/main.css"/>    
+    <!--Main-css-->
     <title>Edumall</title>
     <script>
         if (window.location.hash && window.location.hash == '#_=_') {
@@ -35,9 +37,8 @@
     </script>
 <body class='home_page'></body>
 <!-- My CSS -->
-<link rel="stylesheet" media="all"
-      href="../staticedm.r.worldssl.net/assets/ab_testing-9a9d1b1c5bb684eec711d9fb945fd87d83b06362ec3966fc78b3ca9390a9d8a7.css"/>
-<script src="../staticedm.r.worldssl.net/assets/ab_testing-b3069cb09c4f07a80b1028b172c15582d10269739732c8dbe5ec00af54c89e78.js"></script>
+
+<script src="welearn-js/main.js"></script>
 <header class='container-fluid' id='header'>
     <div class='row'>
         <nav class='navbar navbar-default top-menu'>
@@ -55,8 +56,8 @@
                             </button>
                             <a class='navbar-brand' href='courses.html'>
                                 <img style="height: 55px;margin-top: -20px;"
-                                     src="../staticedm.r.worldssl.net/assets/logo_new_year-a8a262e9a54ec76566e703a22f94c46f73750aeed77996d599c276c712feedd5.png"
-                                     alt="Logo new year a8a262e9a54ec76566e703a22f94c46f73750aeed77996d599c276c712feedd5"/>
+                                     src="welearn-img/logo.png"
+                                     alt="Logo"/>
                             </a>
                         </div>
                         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -271,15 +272,15 @@
                     <div class='col-md-6 category first'>
                         <a href='courses5c81.html?es_template=CNTT'>
                             <h5>Người lớn</h5>
-                            <img src="../staticedm.r.worldssl.net/assets/abtesting/homepage/v1/icon-1-88010053da1193e5ae678b4d0a00d2fbe7cef4a84873b1a613d59742c499d210.png"
-                                 alt="Icon 1 88010053da1193e5ae678b4d0a00d2fbe7cef4a84873b1a613d59742c499d210"/>
+                            <img src="welearn-img/cntt.png"
+                                 alt="Người lớn"/>
                         </a>
                     </div>
                     <div class='col-md-6 category first'>
                         <a href='courses5c81.html?es_template=CNTT'>
                             <h5>Trẻ em</h5>
-                            <img src="../staticedm.r.worldssl.net/assets/abtesting/homepage/v1/icon-1-88010053da1193e5ae678b4d0a00d2fbe7cef4a84873b1a613d59742c499d210.png"
-                                 alt="Icon 1 88010053da1193e5ae678b4d0a00d2fbe7cef4a84873b1a613d59742c499d210"/>
+                            <img src="welearn-img/cntt.png"
+                                 alt="Trẻ con"/>
                         </a>
                     </div>
                 </div>
@@ -292,7 +293,7 @@
                     <div class='col-sm-6 col-md-3'>
                         <div class='thumbnail block-content'>
                             <a href='course/noi-thoa-thich-8-tieng-moi-ngay-ma-khong-lo-mat-giong.html'>
-                                <img src="../d1nzpkv5wwh1xf.cloudfront.net/320/kelley-57bfb0d3ce4b1438274ba1fd/20160917-anhnt01/anhtn01-noi-thoa-thich-8-tieng-moi-ngay-ma-khong-lo-mat-giong.html"
+                                <img src="welearn-img/anhtn01-noi-thoa-thich-8-tieng-moi-ngay-ma-khong-lo-mat-giong.png"
                                      alt="Anhtn01 noi thoa thich 8 tieng moi ngay ma khong lo mat giong"/>
                             </a>
 
@@ -334,7 +335,7 @@
                     <div class='col-sm-6 col-md-3'>
                         <div class='thumbnail block-content'>
                             <a href='course/guitar-dem-hat-trong-30-ngay.html'>
-                                <img src="../staticedm.r.worldssl.net/uploads/images/courses/guitar-dem-hat-trong-30-ngay.png"
+                                <img src="welearn-img/guitar-dem-hat-trong-30-ngay.png"
                                      alt="Guitar dem hat trong 30 ngay"/>
                             </a>
 
@@ -376,7 +377,7 @@
                     <div class='col-sm-6 col-md-3'>
                         <div class='thumbnail block-content'>
                             <a href='course/tuyet-chieu-ban-hang-so-mot.html'>
-                                <img src="../staticedm.r.worldssl.net/uploads/images/courses/tuyet-chieu-ban-hang-so-mot.png"
+                                <img src="welearn-img/tuyet-chieu-ban-hang-so-mot.png"
                                      alt="Tuyet chieu ban hang so mot"/>
                             </a>
 
@@ -418,7 +419,7 @@
                     <div class='col-sm-6 col-md-3'>
                         <div class='thumbnail block-content'>
                             <a href='course/lam-chu-excel-2010-trong-4-gio.html'>
-                                <img src="../staticedm.r.worldssl.net/uploads/images/courses/course_image_tunt_230x130.png"
+                                <img src="welearn-img/course_image_tunt_230x130.png"
                                      alt="Course image tunt 230x130"/>
                             </a>
 
@@ -462,7 +463,7 @@
                     <div class='col-sm-6 col-md-3'>
                         <div class='thumbnail block-content'>
                             <a href='course/lap-trinh-web-cho-nguoi-moi-bat-dau.html'>
-                                <img src="../staticedm.r.worldssl.net/uploads/images/courses/lap-trinh-web-cho-nguoi-moi-bat-dau.png"
+                                <img src="welearn-img/lap-trinh-web-cho-nguoi-moi-bat-dau.png"
                                      alt="Lap trinh web cho nguoi moi bat dau"/>
                             </a>
 
@@ -505,7 +506,7 @@
                     <div class='col-sm-6 col-md-3'>
                         <div class='thumbnail block-content'>
                             <a href='course/thanh-thao-photoshop-trong-vong-7-ngay.html'>
-                                <img src="../d1nzpkv5wwh1xf.cloudfront.net/320/kelley-57bfb0d3ce4b1438274ba1fd/20160917-huypq01_cl22_1-3_final/huypq01-thanh-thao-photoshop-trong-vong-7-ngay.html"
+                                <img src="welearn-img/laptrinhandroidcoban.jpg"
                                      alt="Huypq01 thanh thao photoshop trong vong 7 ngay"/>
                             </a>
 
@@ -547,8 +548,7 @@
                     <div class='col-sm-6 col-md-3'>
                         <div class='thumbnail block-content'>
                             <a href='course/10-buoc-de-lam-seo.html'>
-                                <img src="../d1nzpkv5wwh1xf.cloudfront.net/320/kelley-57bfb0d3ce4b1438274ba1fd/20160917-/hoangvm02-10-buoc-de-lam-seo.html"
-                                     alt="Hoangvm02 10 buoc de lam seo"/>
+                                <img src="welearn-img/laptrinhandroidcoban.jpg" alt="Hoangvm02 10 buoc de lam seo"/>
                             </a>
 
                             <div class='caption'>
@@ -589,8 +589,7 @@
                     <div class='col-sm-6 col-md-3'>
                         <div class='thumbnail block-content'>
                             <a href='course/dung-phim-chuyen-nghiep-voi-adobe-premiere.html'>
-                                <img src="../staticedm.r.worldssl.net/uploads/images/courses/dung-phim-chuyen-nghiep-voi-adobe-premiere.png"
-                                     alt="Dung phim chuyen nghiep voi adobe premiere"/>
+                                <img src="welearn-img/laptrinhandroidcoban.jpg" alt="Dung phim chuyen nghiep voi adobe premiere"/>
                             </a>
 
                             <div class='caption'>
@@ -633,8 +632,7 @@
                     <div class='col-sm-6 col-md-3'>
                         <div class='thumbnail block-content'>
                             <a href='course/ts-le-tham-duong-lanh-dao-la-mot-nghe-phai-hoc.html'>
-                                <img src="../staticedm.r.worldssl.net/uploads/images/courses/ts-le-tham-duong-lanh-dao-la-mot-nghe-phai-hoc.png"
-                                     alt="Ts le tham duong lanh dao la mot nghe phai hoc"/>
+                                <img src="welearn-img/laptrinhandroidcoban.jpg" alt="Ts le tham duong lanh dao la mot nghe phai hoc"/>
                             </a>
 
                             <div class='caption'>
@@ -675,8 +673,7 @@
                     <div class='col-sm-6 col-md-3'>
                         <div class='thumbnail block-content'>
                             <a href='course/yoga-truc-tuyen-khoe-dep-ngay-tai-nha.html'>
-                                <img src="../d1nzpkv5wwh1xf.cloudfront.net/320/kelley-57bfb0d3ce4b1438274ba1fd/20160917-hieunyoga1lan-11807/hieun01-yoga-truc-tuyen-khoe-dep-ngay-tai-nha.html"
-                                     alt="Hieun01 yoga truc tuyen khoe dep ngay tai nha"/>
+                                <img src="welearn-img/laptrinhandroidcoban.jpg" alt="Hieun01 yoga truc tuyen khoe dep ngay tai nha"/>
                             </a>
 
                             <div class='caption'>
@@ -717,8 +714,7 @@
                     <div class='col-sm-6 col-md-3'>
                         <div class='thumbnail block-content'>
                             <a href='course/tuyet-chieu-nuoi-day-con-thanh-tai.html'>
-                                <img src="../staticedm.r.worldssl.net/uploads/images/courses/tuyet-chieu-nuoi-day-con-thanh-tai.jpg"
-                                     alt="Tuyet chieu nuoi day con thanh tai"/>
+                                <img src="welearn-img/laptrinhandroidcoban.jpg" alt="Tuyet chieu nuoi day con thanh tai"/>
                             </a>
 
                             <div class='caption'>
@@ -759,8 +755,7 @@
                     <div class='col-sm-6 col-md-3'>
                         <div class='thumbnail block-content'>
                             <a href='course/the-hien-cam-xuc.html'>
-                                <img src="../staticedm.r.worldssl.net/uploads/images/courses/course_image_1.jpg"
-                                     alt="Course image 1"/>
+                                <img src="welearn-img/laptrinhandroidcoban.jpg" alt="Course image 1"/>
                             </a>
 
                             <div class='caption'>
@@ -832,7 +827,7 @@
                 <div class='row'>
                     <div class='col-sm-3 block-footer'>
                         <a href='http://online.gov.vn/HomePage/WebsiteDisplay.aspx?DocId=22565'>
-                            <img src="../staticedm.r.worldssl.net/assets/abtesting/homepage/v1/logo-bottom-min-4e883642b1864266b665f5046f164e00cd1b1fdc4b3c1edeae02de3ebb6f0c70.png"
+                            <img src="welearn-img/logo-bottom-min.png"
                                  alt="Logo bottom min 4e883642b1864266b665f5046f164e00cd1b1fdc4b3c1edeae02de3ebb6f0c70"/>
                         </a>
                     </div>
@@ -889,7 +884,7 @@
     </div>
 </footer>
 
-<script src='../cdn.jsdelivr.net/jquery.slick/1.5.9/slick.min.js' type='text/javascript'></script>
+<script src='welearn-js/vendor/slick.min.js' type='text/javascript'></script>
 <script>
     $(document).ready(function () {
         var list_nav = $('.featured-courses-sm .list ul');
